# Demo-Rust-Project

./: Craiglist_listing.csv
Assignment-Final/: Cargo.toml
Assignment-Final/src/: main.rs
Machine_Learning_Rust/: Cargo.toml  temp_test_file.csv
Machine_Learning_Rust/src/: main.rs  test.rs
datacleaning/: Cargo.toml
datacleaning/src/: main.rs
