[package]
name = "Machine_Learning_Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"           # For reading and writing CSV files
ndarray = "0.15.6"      # For efficient array manipulation
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }  # For asynchronous tasks
serde_json = "1.0.118"  # JSON support for Serde
serde_derive = "1.0.203"
ndarray-csv = "0.5.2"
linfa = "0.7.0"
linfa-linear = "0.5.1"
linfa-trees = "0.7.0"
